Fix the signature of the global new/delete operators in allocation.cpp

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b15

      For non-product builds we define global new/delete operators which shut down the VM if called. The rational behind this is that the these global operators shouldn't be used in HotSpot.

      Unfortunately, the signature of some of these operators doesn't conform to the C++ standard which confuses some C++ compilers.

      Also, the asserts in the operators should be changed to guarantees because the code may also be active in not-product (aka. 'optimized') builds.

            Assignee:
            Volker Simonis
            Reporter:
            Volker Simonis
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: