8039805: Fix the signature of the global new/delete operators in allocation.cpp

Reviewed-by: dholmes, lfoltan