hotspot/src/os/aix/vm/os_aix.cpp
@@ -1870,7 +1870,7 @@ public:
 // properties.
 
 // ShmBkBlock: base class for all blocks in the shared memory bookkeeping
-class ShmBkBlock {
+class ShmBkBlock : public CHeapObj<mtInternal> {
 
   ShmBkBlock* _next;
 
